Fixed issue where nav was overlapping main vertical scrollbar.

--- a/src/app/styles/_view-toggles.scss
+++ b/src/app/styles/_view-toggles.scss
@@ -122,8 +122,9 @@
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 100%;
-    z-index: 99999;
+    display: inline-block;
+    right: 17px;
+    z-index: 2;
     height: 70px;
     background: url("../../assets/imgs/misc/transparent-menu-background.png");
 
